--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.22",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "phone": "^3.1.28",
