--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "phone": "^3.1.28",
-    "sequelize": "^6.23.1"
+    "sequelize": "^6.23.1",
+    "xss-clean": "^0.1.1"
   }
 }
